6729739: Update JSR 277 API and javadoc Summary: Updated the JSR 277 API and javadoc Reviewed-by: mchung